# RecLoop

./: .gitignore  README.md  environment.yml  pyproject.toml
recommenders/data/: process2014.py
recommenders/generativerec/: env.yml  recommend_gen.py  run.py  run_simulation.py  utils.py
recommenders/generativerec/ID_generation/: train_rqvae.py  utils.py
recommenders/generativerec/scripts/: ours.sh  tiger.sh
recommenders/generativerec/src/: load_data.py  training.py
recommenders/generativerec_onerec/: LogitProcessor.py  README_eval.md  calc_onerec_layer0_entropy.py  calc_onerec_multilayer_entropy.py  convert_dataset.py  convert_dataset.sh  eval_single_model.py  evaluate.py  example_eval.sh  minionerec_trainer.py  recommend_gen_onerec.py  rl.sh  sft.py  sft.sh  sft_simulation.py  simulation_data_converter.py
recommenders/generativerec_onerec/data/: process2014.py
recommenders/generativerec_onerec/rq/: generate_indices.py  rqvae.sh  (+1 more)
recommenders/tranditionalrec/: datasets.py  modules.py  preprocess_full_data.py  recommend.py  run_finetune.bash  run_finetune_cycle.bash  run_finetune_full.py  run_finetune_full_cycle.py  trainers.py  utils.py
simulation/: api_client.py  api_config.json  avatar.py  closed_loop_recommendation_system.py  data_manager.py  generative_recommend.sh  generative_recommend_onerec.sh  generative_recommend_tiger.sh  item_info_retriever.py  persistent_user_simulator.py  run_simulation_round_generative_onerec.sh  run_simulation_round_generative_tiger.sh  run_simulation_round_traditional.sh  traditional_recommend.sh  user_profile_extractor.py
(+7 files in other folders)
